Enhance restaurant styles by adding responsive design elements and adjusting layout properties. Center align items in the main section, update padding and width for banners and content titles, and ensure consistent spacing across menu sections for improved visual presentation.

--- a/assets/css/restaurant.scss
+++ b/assets/css/restaurant.scss
@@ -26,9 +26,10 @@
 .main {
   display: flex;
   flex-direction: column;
-
+  align-items: center;
   &__banner {
     padding: 0px;
+    width: 100%;
     & img {
       object-fit: cover;
       width: 100%;
@@ -41,13 +42,26 @@
     position: relative;
     top: -50px;
     border-radius: 40px 40px 0px 0px;
-    padding: 30px 20px 40px 20px;
+    padding: 30px 0px 40px 0px;
+    width: 100%;
+
+    @media (min-width: 768px) {
+      width: 80%;
+      align-items: center;
+      justify-content: center;
+    }
 
     &__title {
       display: flex;
       justify-content: space-between;
       align-items: center;
       position: relative;
+      padding: 0px 20px;
+
+      @media (min-width: 768px) {
+        justify-content: center;
+        gap: 20px;
+      }
 
       & h1 {
         @include logo-text;
@@ -65,6 +79,7 @@
       display: flex;
       flex-direction: column;
       gap: 20px;
+      padding: 0px 20px;
 
       &__section {
         display: flex;
@@ -78,6 +93,10 @@
           font-family: Roboto;
           font-weight: 300;
           text-transform: uppercase;
+
+          @media (min-width: 768px) {
+            margin: 0px 10%;
+          }
         }
 
         &__separator {
@@ -85,6 +104,10 @@
           height: 3px;
           background-color: $color-mint;
           margin: 5px 0px 15px 0px;
+
+          @media (min-width: 768px) {
+            margin: 5px 10% 15px 10%;
+          }
         }
 
         &__items {
@@ -99,6 +122,10 @@
             box-shadow: 0px 4px 15px 0px #0000001a;
             border-radius: 15px;
             padding: 15px;
+
+            @media (min-width: 768px) {
+              margin: 0px 10%;
+            }
 
             &__title {
               margin: 0px;
